--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "sass": "^1.89.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
